Fix images in infoboxes overflowing

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -201,6 +201,7 @@ hr {
 	text-align: right;
 	float: right;
 	margin-right: 15px;
+	overflow: hidden;
 }
 
 .txtholder {
